package com.ylkget.pattern.factory.simplefactory.pizza;

/**
 * <p>
 *
 * </p>
 *
 * @author joe 2021/3/27 15:50
 */
public class PepperPizza extends Pizza {
    @Override
    public void prepare() {
        // TODO Auto-generated method stub
        System.out.println(" 给胡椒披萨准备原材料 ");
    }
}
